--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,3 +21,5 @@ jobs:
 
       - name: Build with Maven
         run: mvn --no-transfer-progress -B compile --file pom.xml
+      - name: Tests with Maven
+        run: mvn -B test --file pom.xml
