moved ci to not use up all my actions time, tried renaming ecr names

--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -20,8 +20,8 @@ jobs:
         run: |
           aws ecr get-login-password --region eu-west-1 | docker login --username AWS --password-stdin 244530008913.dkr.ecr.eu-west-1.amazonaws.com
           rev=$(git rev-parse --short HEAD)
-          docker build . -t shopifly:$rev
-          docker tag shopifly 244530008913.dkr.ecr.eu-west-1.amazonaws.com/1022:$rev
-          docker tag shopifly 244530008913.dkr.ecr.eu-west-1.amazonaws.com/1022:latest
+          docker build -t shopifly:$rev .
+          docker tag shopifly:$rev 244530008913.dkr.ecr.eu-west-1.amazonaws.com/1022:$rev
+          docker tag shopifly:$rev 244530008913.dkr.ecr.eu-west-1.amazonaws.com/1022:latest
           docker push 244530008913.dkr.ecr.eu-west-1.amazonaws.com/1022:$rev
           docker push 244530008913.dkr.ecr.eu-west-1.amazonaws.com/1022:latest
