--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -20,6 +20,6 @@ jobs:
         run: |
           aws ecr get-login-password --region eu-west-1 | docker login --username AWS --password-stdin 244530008913.dkr.ecr.eu-west-1.amazonaws.com
           rev=$(git rev-parse --short HEAD)
-          docker build -t 1022 .
-          docker tag 1022:latest 244530008913.dkr.ecr.eu-west-1.amazonaws.com/1022:latest
+          docker build -t shopppifly .
+          docker tag shopppifly:latest 244530008913.dkr.ecr.eu-west-1.amazonaws.com/1022:latest
           docker push 244530008913.dkr.ecr.eu-west-1.amazonaws.com/1022:latest
