--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,20 +3,15 @@
 # or something?
 name: CI pipeline
 on:
-  workflow_dispatch:
-
-
+  push:
+    branches: [ '**' ]
+  pull_request:
+    branches: [ '**' ]
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - name: Set up JDK 11
-        uses: actions/setup-java@v2
-        with:
-          java-version: '11'
-          distribution: 'adopt'
-          cache: maven
 
       - name: Build with Maven
         run: mvn --no-transfer-progress -B compile --file pom.xml
