--- a/.github/workflows/cloudwatch_dashboard.yml
+++ b/.github/workflows/cloudwatch_dashboard.yml
@@ -14,8 +14,8 @@ jobs:
       AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
       AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
       AWS_REGION: eu-west-1
-      CANDIDATE_ID: jim
-      CANDIDATE_EMAIL: jim@gaffel.com
+      CANDIDATE_ID: 1022
+      CANDIDATE_EMAIL: thonem10@gmail.com
     steps:
       - uses: actions/checkout@v3
       - name: Setup Terraform
@@ -27,8 +27,8 @@ jobs:
 
       - name: Terraform Plan
         id: plan
-        run: terraform plan  -var="candidate_id=$CANDIDATE_ID" -var="candidate_email=CANDIDATE_EMAIL" -no-color
+        run: terraform plan
         continue-on-error: false
 
       - name: Terraform Apply
-        run: terraform apply -var="candidate_id=$CANDIDATE_ID" -var="candidate_email=$CANDIDATE_EMAIL"  -auto-approve
+        run: terraform apply -auto-approve
