--- a/.github/workflows/cloudwatch_dashboard.yml
+++ b/.github/workflows/cloudwatch_dashboard.yml
@@ -3,7 +3,6 @@ defaults:
   run:
     working-directory: infra
 on:
-  pull_request:
   workflow_dispatch:
 
 jobs:
@@ -20,6 +19,10 @@ jobs:
       - uses: actions/checkout@v3
       - name: Setup Terraform
         uses: hashicorp/setup-terraform@v2
+
+      - name: Terraform Format
+        id: fmt
+        run: terraform fmt -check
 
       - name: Terraform Init
         id: init
