--- a/.github/workflows/cloudwatch_dashboard.yml
+++ b/.github/workflows/cloudwatch_dashboard.yml
@@ -20,24 +20,29 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Setup Terraform
-        uses: hashicorp/setup-terraform@v2
+        uses: hashicorp/setup-terraform@v1
+
+      - name: Terraform Format
+        id: fmt
+        run: terraform fmt -check
 
       - name: Terraform Init
-        working-directory: ./infra
         id: init
         run: terraform init
 
       - name: Terraform Validate
-        working-directory: ./infra
         id: validate
         run: terraform validate -no-color
 
       - name: Terraform Plan
-        working-directory: ./infra
         id: plan
-        run: terraform plan
-        continue-on-error: false
+        if: github.event_name == 'pull_request'
+        run: terraform plan -no-color
+        continue-on-error: true
+
+      - name: Terraform Plan Status
+        if: steps.plan.outcome == 'failure'
+        run: exit 1
 
       - name: Terraform Apply
-        working-directory: ./infra
         run: terraform apply -auto-approve
