--- a/.github/workflows/cloudwatch_dashboard.yml
+++ b/.github/workflows/cloudwatch_dashboard.yml
@@ -42,4 +42,5 @@ jobs:
         run: exit 1
 
       - name: Terraform Apply
+        if: github.event_name == 'push'
         run: terraform apply -auto-approve
