--- a/.github/workflows/cloudwatch_dashboard.yml
+++ b/.github/workflows/cloudwatch_dashboard.yml
@@ -3,7 +3,10 @@ defaults:
   run:
     working-directory: infra
 on:
-  workflow_dispatch:
+  push:
+    branches: [ main ]
+  pull_request:
+    branches: [ main ]
 
 jobs:
   terraform:
